# apertium-niv-niv

./: Makefile.am  README  apertium-niv-niv.niv@Amur-niv@Sakh.dix  configure.ac  modes.xml
